--- a/weekly/week6/formStyle.css
+++ b/weekly/week6/formStyle.css
@@ -102,3 +102,26 @@ p
 {
     font-size: 2rem;
 }
+
+.successBox
+{
+    border-radius: 2rem;
+    padding: 2rem 5rem;
+    border: 0.25rem solid green;
+    background-color: rgba(0, 128, 0, 0.25);
+    color: green;
+}
+
+.successBox p
+{
+    font-size: 1.5rem;
+}
+
+.errorBox
+{
+    border-radius: 2rem;
+    padding: 2rem 5rem;
+    border: 0.25rem solid red;
+    background-color: rgba(255, 0, 0, 0.25);
+    color: darkred;
+}
