--- a/extra/Spotify/spotify.css
+++ b/extra/Spotify/spotify.css
@@ -13,7 +13,9 @@ body
     font-size: 18px;
     color: #656565;
     background-color: #000000;
-    min-height: 100vh;
+    /* background-color: white; */
+
+    --smallGap: 0.5rem;
 }
 
 h1, h2, h3, h4, h5
@@ -28,7 +30,7 @@ p, a
 
 input
 {
-    all: unset;
+    /* all: unset; */
 }
 
 /* GENERAL */
@@ -44,7 +46,7 @@ input
 {
     display: flex;
     flex-direction: row;
-    gap: 0.5rem;
+    gap: var(--smallGap);
 }
 
 /* HEADER */
@@ -55,7 +57,8 @@ input
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     width: 100%;
-    padding: 0.5rem;
+    padding: var(--smallGap);
+    padding-left: 2rem;
 }
 
 .spotifyLogo
@@ -76,12 +79,11 @@ input
 
 .searchBar
 {
-    width: 30vw;
+    width: 28vw;
     height: 48px;
     border-radius: 15rem;
     padding: 0;    
     background-color: #1E1E1E;
-
 }
 
 .account
@@ -94,9 +96,8 @@ input
 main
 {
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    gap: 1rem;
-    margin: 5px;
+    grid-template-columns: 1fr 3fr;
+    gap: var(--smallGap);
 }
 
 main > div
@@ -105,37 +106,47 @@ main > div
     padding: 0.5rem;
 }
 
+img
+{
+    width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
 /* SIDEBAR */
 
 #sidebar
 {
-
     background-color: #111111;
     height: 100%;
 }
 
-#content
-{
-    background-color: lightgrey;
-}
+/* AD BANNER */
 
 #adBanner
 {
     /* temp */
-    height: 5rem;
+    height: 4rem;
     
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
+    /* margin: var(--smallGap); */
 
-    background-color: #509BF4;
+    background-image: linear-gradient(90deg,#af2896,#509bf5);
 }
 
 /* CONTENT */
 
 #content
 {
-    background-color: #212121;
+    background-color: lightgrey;
+}
+
+#content
+{
+    /* background-color: #212121; */
+    background-image: linear-gradient(#222222,#121212);
     color: white;
 }
 
@@ -146,9 +157,7 @@ main > div
 
 #content .img
 {
-    background-color: aqua;
-    width: 10rem;
-    height: 10rem;
+    aspect-ratio: 1/1;
 }
 
 #content .items
@@ -159,7 +168,9 @@ main > div
 
 #content .contentTile
 {
-    padding: 0.5rem;
+    padding: 0.75rem;
+    width: 12.5rem;
+    height: 18rem;
 }
 
 #content .contentTile .img
@@ -169,6 +180,38 @@ main > div
 
 #content .contentTile.artist .img
 {
+    border-radius: 20rem;
+}
 
-    border-radius: 15rem;
+/* FORM */
+#form h1
+{
+    text-align: center;
+}
+
+#form form
+{
+    width: 60%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+    margin: 1rem auto;
+    font-size: 1.5rem;
+}
+
+#form form input
+{
+    justify-self: start;
+    width: 100%;
+}
+
+#form form input[type="submit"]
+{
+    grid-column: span 2;
+}
+
+#form form div.inLine
+{
+    justify-content: space-between;
+    grid-column: span 2;
 }
